--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,7 @@ body{
     width: 100%;
     max-width: 384px;
     margin-top: 30px;
-    padding: 21px 0;
+    padding: 21px 5px;
     font-weight: 700;
     font-size: 20px;
     line-height: 25px;
